# Generic-HTTP-Server-In-C

./: .gitignore  CMakeLists.txt  Readme.md  a.out  build.sh
Demo-Files/: Index.html  index.html  style.css
Headers/: Functions.h  Header.h
Source/: Functions.c  Main.c  Server_Application.c  test  test.c
include/: Functions.h
src/: Functions.c  Server_Application.c
web/: index.html  index.js  style.css
